[gd_scene load_steps=7 format=3 uid="uid://b20478nvktj3k"]

[ext_resource type="Script" path="res://src/entities/ball_creature/ball_creature_captured.gd" id="1_ufb1a"]
[ext_resource type="Texture2D" uid="uid://bhg0gu4uapxnm" path="res://assets/ball_creature/ball_creature_spritesheet.png" id="2_mprvu"]
[ext_resource type="PackedScene" uid="uid://cbjpup34gan1c" path="res://src/entities/ball_creature/paletted_sprite.tscn" id="2_y7gdq"]

[sub_resource type="Animation" id="Animation_1q3nh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PalettedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6acpr"]
resource_name = "jumping"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PalettedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.3, 1.7, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4a6rp"]
_data = {
"RESET": SubResource("Animation_1q3nh"),
"jumping": SubResource("Animation_6acpr")
}

[node name="BallCreatureCaptured" type="Node2D"]
script = ExtResource("1_ufb1a")

[node name="PalettedSprite" parent="." instance=ExtResource("2_y7gdq")]
texture = ExtResource("2_mprvu")
hframes = 3
vframes = 5
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4a6rp")
}

[node name="AnimationDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AnimationDelayTimer" to="." method="_on_animation_delay_timer_timeout"]
